syntax = "proto3";

option csharp_namespace = "Saes.Protos.ModelServices";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "models.proto";
import "statuses.proto";
package logAuthentication;

// NOT_IMPLEMENTED

service LogAuthenticationService {
    rpc Search (LogAuthenticationLookup) returns (LogAuthenticationLookupResponse);
}

message LogAuthenticationLookup
{
    google.protobuf.Int32Value LogAuthenticationID = 1;
	google.protobuf.StringValue EnteredLogin = 2;
	google.protobuf.BoolValue FirstFactorResult = 3;
	google.protobuf.BoolValue SecondFactorResult = 4;
	google.protobuf.StringValue AuthServiceResponse = 5;
	google.protobuf.StringValue MAC = 6;
	google.protobuf.StringValue IP = 7;
	google.protobuf.StringValue MashineName = 8;
	google.protobuf.StringValue MashineUserName = 9;
	google.protobuf.Timestamp DateStart = 10;
	google.protobuf.Timestamp DateEnd = 11;
}


// Comment
message LogAuthenticationLookupResponse
{
    repeated models.LogAuthenticationDto data = 1;
}